<resources>
    <string name="app_name">OneAccess</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="do_login">To access enter your username and password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_lost">If you have lost your password press the button below</string>
    <string name="password_lost1">Password recovery</string>
    <string name="InsertData">Insert your info......</string>
    <string name="InsertEmail">Email.....</string>
    <string name="passwordConfirm">Confirm password</string>
    <string name="BornDay">Born Day</string>
    <string name="PhoneNumber">Phone number</string>
    <string name="PostalAddress">Postal address</string>
    <string name="IdentityCard">Identity card</string>
    <string name="TextFinal">welcome, from here you can download / view the currently compatible social networks</string>
    <string name="instagram"><![CDATA["Naviga su https://play.google.com/store/apps/details?id=com.instagram.android&hl=us&gl=US]]></string>
    <string name="credits">Credits by Tux… ah no Brun Marco, Casagrande Alessandro, Da Ros Samuel</string>

</resources>